# HyperNix-pip

./: .gitignore  LICENSE  MANIFEST.in  README.md  ci-fixes-v8.patch  fix-hyped-dict-logits(1).patch  fix-intervaltimer-should_fire.patch  hypernix-v0.71.1.patch  hypernix_fixes.diff  pressure-cooker-v5-and-fixes.patch  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: build-cctvtop.yml  build.yml  ci.yml  deploy-docs.yml  public-release.yml  refresh-stats.yml  release.yml  sync_wiki_workflow.yaml  update-json-stats.yml
docs/: README.md  index 2.html  index.html  package-lock.json  package.json  tailwind.config.js  update_stats.py  v1.json
docs/public/v1/: json
docs/src/: App(1).tsx  App-1.tsx  App.jsx  App.tsx  App4.tsx  index.css
docs/v1/: json  json.json
examples/: curriculum_eval_v0_70_4.py  custom_arch.py  hypernix_run.json  quickstart.py  resilient_finetune_v0_70_4.py  run_hypernix.py  train hypernix 1 5 gtx1080.py  train_hypernix_0_1_5_evaluator.py  train_hypernix_1_5_gtx1080.py  upload_to_hub.py
scripts/: apply_hypernix_fixes.py  autofix-B  autofix-E  benchmark_v5.py  benchmark_v5s.py  install_deps.sh  install_macos_legacy.sh  quantize_i7_7660u.sh  update json stats.py  update_json_stats(1).py  update_json_stats.py
src/hypernix/: __init__.py  abbicus.py  apron.py  arch.py  assistant.py  bell.py  blender.py  brewer.py  cake_pan.py  camouflage.py  cardboard_box.py  cctvtop.cpp  cctvtop.py  cli.py  coffee_maker.py  compactor.py  compute_framework.py  config.py  convert.py  cookbook.py  countertop.py  cutting_board.py  deep_fryer.py  deps.py  dishwasher.py  doctor.py  download.py  espresso_maker.py  ethanol.py  fetcher.py  fizzle.py  flour.py  food_processor.py  freezer.py  gatekeeper.py  generate.py  gkey_cli.py  hyped.py  hyper_log.py  industrial_range.py  (+61 more)
src/hypernix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hypernix/webui_static/: app.js  index.html  style.css
tests/: test_alarms_and_presets.py  test_arch_mapping.py  test_cli_integration.py  test_coverage_beef.py  test_deps_and_windows.py  test_fetcher.py  test_freezer.py  test_fridges.py  test_install_pin.py  test_kitchen_v044.py  test_kitchen_v045.py  test_lazy_suzan.py  test_lint_regressions.py  test_lunchbox.py  test_map.py  test_new_archs_v035.py  test_nix_fallback.py  test_old_oven.py  test_pressure_cooker_v048.py  test_pressure_cooker_v2.py  test_pressure_cooker_v3.py  test_quantize_v0703.py  test_ranges.py  test_shakers_and_torchcompat.py  test_snapshot_roundtrip.py  test_tupperware.py  test_tvtop_plus_plus_comprehensive.py  test_v031_chat_and_archs.py  test_v047_deep_fryer_cake_pan_presets.py  test_v050.py  test_v051.py  test_v051_1.py  test_v051_3.py  test_v051_4.py  test_v052_5.py  test_v052_6.py  test_v060.py  test_v061_1.py  test_v061_2.py  test_v061_b1.py  (+11 more)
wiki/: Abbicus.md  Alarms.md  Apron.md  Architectures.md  Bell.md  Blender.md  CLI.md  CakePan.md  Camouflage.md  Changelog.md  CoffeeMaker.md  Convert.md  Cookbook.md  Countertop.md  CuttingBoard.md  Dashboards.md  DeepFryer.md  Download.md  EspressoMaker.md  Flour.md  FoodProcessor.md  Frameworks.md  Freezer.md  Fridges.md  Home.md  HyperLog.md  Kitchen.md  Lunchbox.md  MTP.md  Menu.md  Microwave.md  Optimizers.md  Ovens.md  Pans.md  Pascal.md  PipelineMechanics.md  Pressure-Cooker-V3.md  Pressure-Cooker-V4.md  Pressure-Cooker-V5.md  Quantization.md  (+15 more)
