[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypernix"
version = "0.32.0"
description = "Download and quantize the HyperNix PyTorch model to GGUF (fp32/fp16/Q8_0/Q6_K/Q4_K_M)."
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE"]
# 3.12 is the recommended interpreter, but the code is pure-Python and runs on
# any CPython that has a torch 2.7.1 wheel. Keep the floor at 3.10 so modern
# syntax compiles (structural pattern matching, PEP 604 unions).
requires-python = ">=3.10,<3.14"
authors = [{ name = "HyperNix contributors" }]
keywords = ["hypernix", "gguf", "quantization", "llama.cpp", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # torch 2.7 is the floor (for nn.RMSNorm + 2.7's rope-friendly SDPA path).
    # No upper bound on 2.x — 2.7, 2.8, 2.9, etc. are all accepted. CUDA 11
    # users: install from the cu118 index first, e.g.
    #   pip install --index-url https://download.pytorch.org/whl/cu118 torch
    # then `pip install hypernix` will reuse that torch rather than pulling
    # a CUDA-12 wheel.
    "torch>=2.7,<3",
    "numpy>=1.26,<3",
    "safetensors>=0.4.3",
    "huggingface-hub>=0.24",
    "gguf>=0.10.0",
    "tqdm>=4.66",
    "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
llama-cpp = ["llama-cpp-python>=0.2.90"]
train = ["transformers>=4.44", "accelerate>=0.33"]
dev = ["pytest>=8", "ruff>=0.5", "build>=1.2", "twine>=5"]

[project.scripts]
hypernix = "hypernix.cli:main"
hypernix-quantize = "hypernix.cli:main"

[project.urls]
Homepage = "https://huggingface.co/ray0rf1re/hyper-nix.1"
Source = "https://github.com/minerofthesoal/hypernix-pip"
Issues = "https://github.com/minerofthesoal/hypernix-pip/issues"

# ---------------------------------------------------------------------------
# Setuptools: src/ layout + include extra files in the sdist via MANIFEST.in
# ---------------------------------------------------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["hypernix*"]

[tool.setuptools.package-data]
hypernix = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff / pytest defaults (also duplicated in ruff.toml / pytest.ini so
# editors pick them up regardless of project layout).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
