; Duplicate of pyproject.toml so legacy tools (older pip, bdist_rpm,
; stdeb, fpm) that still read setup.cfg get a working manifest.

[metadata]
name = hypernix
version = 0.42.0
description = Download and quantize the HyperNix PyTorch model to GGUF (fp32/fp16/Q8_0/Q6_K/Q4_K_M).
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
url = https://github.com/minerofthesoal/hypernix-pip
author = HyperNix contributors
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10,<3.14
include_package_data = True
install_requires =
    torch>=2.7,<3
    numpy>=1.26,<3
    safetensors>=0.4.3
    huggingface-hub>=0.24
    gguf>=0.10.0
    tqdm>=4.66
    sentencepiece>=0.2.1

[options.packages.find]
where = src
include = hypernix*

[options.extras_require]
llama-cpp =
    llama-cpp-python>=0.2.90
train =
    transformers>=4.44
    accelerate>=0.33
dev =
    pytest>=8
    ruff>=0.5
    build>=1.2
    twine>=5

[options.entry_points]
console_scripts =
    hypernix = hypernix.cli:main
    hypernix-quantize = hypernix.cli:main
